--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "*"
+asgiref = "==3.3.1"
+pytz = "==2020.5"
+sqlparse = "==0.4.1"
+Django = "==3.1.5"
 
 [requires]
 python_version = "3.6"
