--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ asgiref = "==3.3.1"
 pytz = "==2020.5"
 sqlparse = "==0.4.1"
 Django = "==3.1.5"
+pillow = "*"
 
 [requires]
 python_version = "3.6"
