--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 -i https://pypi.org/simple
-asgiref==3.3.1; python_version >= '3.5'
+asgiref==3.3.1
 django==3.1.5
+pillow==8.2.0
 pytz==2020.5
-sqlparse==0.4.1; python_version >= '3.5'
+sqlparse==0.4.1
