--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,14 @@ asgiref = "==3.3.1"
 pytz = "==2020.5"
 sqlparse = "==0.4.1"
 Django = "==3.1.5"
+django-extensions = "*"
+python-dateutil = "*"
+pytest = "*"
+pytest-django = "*"
+coverage = "*"
+django-coverage-plugin = "*"
+pytest-cov = "*"
 pillow = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.8"
