--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ django-coverage-plugin = "*"
 pytest-cov = "*"
 pillow = "*"
 selenium = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.8"
