--- a/Pipfile
+++ b/Pipfile
@@ -10,16 +10,23 @@ asgiref = "==3.3.1"
 pytz = "==2020.5"
 sqlparse = "==0.4.1"
 Django = "==3.1.5"
-django-extensions = "*"
-python-dateutil = "*"
-pytest = "*"
-pytest-django = "*"
-coverage = "*"
-django-coverage-plugin = "*"
-pytest-cov = "*"
-pillow = "*"
-selenium = "*"
+django-extensions = "==3.1.3"
+python-dateutil = "==2.8.1"
+pytest = "==6.2.3"
+pytest-django = "==4.2.0"
+coverage = "==5.5"
+django-coverage-plugin = "==1.8.0"
+pytest-cov = "==2.11.1"
+selenium = "==3.141.0"
 django-crispy-forms = "*"
+attrs = "==20.3.0"
+iniconfig = "==1.1.1"
+pluggy = "==0.13.1"
+py = "==1.10.0"
+pyparsing = "==2.4.7"
+six = "==1.15.0"
+toml = "==0.10.2"
+Pillow = "==8.2.0"
 
 [requires]
 python_version = "3.8"
