--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,25 @@
 -i https://pypi.org/simple
 asgiref==3.3.1
-attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+attrs==20.3.0
 coverage==5.5
 django-coverage-plugin==1.8.0
+django-crispy-forms==1.11.2
 django-extensions==3.1.3
 django==3.1.5
+fontawesome-free==5.15.3
 iniconfig==1.1.1
 packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pillow==8.2.0
-pluggy==0.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-py==1.10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
 pytest-cov==2.11.1
 pytest-django==4.2.0
 pytest==6.2.3
 python-dateutil==2.8.1
 pytz==2020.5
-sqlparse==0.4.1; python_version >= '3.5'
 selenium==3.141.0
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+six==1.15.0
 sqlparse==0.4.1
-toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+toml==0.10.2
+urllib3==1.26.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
