--- a/Pipfile
+++ b/Pipfile
@@ -28,6 +28,7 @@ six = "==1.15.0"
 toml = "==0.10.2"
 Pillow = "==8.2.0"
 fontawesome-free = "*"
+crispy-bootstrap5 = "*"
 
 [requires]
 python_version = "3.8"
