--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 asgiref==3.3.1
 attrs==20.3.0
 coverage==5.5
+crispy-bootstrap5==0.3.1
 django-coverage-plugin==1.8.0
 django-crispy-forms==1.11.2
 django-extensions==3.1.3
