--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ coverage = "==5.5"
 django-coverage-plugin = "==1.8.0"
 pytest-cov = "==2.11.1"
 selenium = "==3.141.0"
-django-crispy-forms = "*"
+django-crispy-forms = "==1.11.2"
 attrs = "==20.3.0"
 iniconfig = "==1.1.1"
 pluggy = "==0.13.1"
@@ -27,8 +27,9 @@ pyparsing = "==2.4.7"
 six = "==1.15.0"
 toml = "==0.10.2"
 Pillow = "==8.2.0"
-fontawesome-free = "*"
-crispy-bootstrap5 = "*"
+fontawesome-free = "==5.15.3"
+crispy-bootstrap5 = "==0.3.1"
+urllib3 = "==1.26.4"
 
 [requires]
 python_version = "3.8"
