--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-crispy-forms==1.11.2
 django-extensions==3.1.3
 django==3.1.5
 fontawesome-free==5.15.3
+gunicorn==20.1.0
 iniconfig==1.1.1
 packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pillow==8.2.0
@@ -23,4 +24,5 @@ selenium==3.141.0
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
-urllib3==1.26.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.26.4
+whitenoise==5.2.0
