--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,9 @@ crispy-bootstrap5 = "==0.3.1"
 urllib3 = "==1.26.4"
 gunicorn = "*"
 whitenoise = "*"
+mysqlclient = "*"
+psycopg2 = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.8"
