--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,20 @@ asgiref==3.3.1
 attrs==20.3.0
 coverage==5.5
 crispy-bootstrap5==0.3.1
+dj-database-url==0.5.0
 django-coverage-plugin==1.8.0
 django-crispy-forms==1.11.2
 django-extensions==3.1.3
+django-heroku==0.3.1
 django==3.1.5
 fontawesome-free==5.15.3
 gunicorn==20.1.0
 iniconfig==1.1.1
+mysqlclient==2.0.3
 packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pillow==8.2.0
 pluggy==0.13.1
+psycopg2==2.8.6
 py==1.10.0
 pyparsing==2.4.7
 pytest-cov==2.11.1
