Made more Makefile scripts, cleaned up, removed unused app and updated gitignore for staticfiles

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [coverage:run]
 include = project/*
-omit = *migrations*, *tests*
+omit = *migrations*, *tests*, *templates*, *__init__*, *templatetags*
 plugins =
     django_coverage_plugin
