Clean up on requirements/dev-requirements

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "*"
+coverage = "*"
+pytest-cov = "*"
+pytest-django = "*"
+django-coverage-plugin = "*"
 
 [packages]
 asgiref = "==3.3.1"
@@ -12,29 +17,14 @@ sqlparse = "==0.4.1"
 Django = "==3.1.5"
 django-extensions = "==3.1.3"
 python-dateutil = "==2.8.1"
-pytest = "==6.2.3"
-pytest-django = "==4.2.0"
-coverage = "==5.5"
-django-coverage-plugin = "==1.8.0"
-pytest-cov = "==2.11.1"
-selenium = "==3.141.0"
 django-crispy-forms = "==1.11.2"
-attrs = "==20.3.0"
 iniconfig = "==1.1.1"
-pluggy = "==0.13.1"
-py = "==1.10.0"
-pyparsing = "==2.4.7"
-six = "==1.15.0"
-toml = "==0.10.2"
 Pillow = "==8.2.0"
 fontawesome-free = "==5.15.3"
 crispy-bootstrap5 = "==0.3.1"
-urllib3 = "==1.26.4"
 gunicorn = "==20.1.0"
 whitenoise = "==5.2.0"
-mysqlclient = "==2.0.3"
 psycopg2 = "==2.8.6"
-django-heroku = "==0.3.1"
 dj-database-url = "==0.5.0"
 
 [requires]
