--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ gunicorn = "==20.1.0"
 whitenoise = "==5.2.0"
 psycopg2 = "==2.8.6"
 dj-database-url = "==0.5.0"
+six = "==1.16.0"
 
 [requires]
 python_version = "3.8"
