--- a/Pipfile
+++ b/Pipfile
@@ -24,9 +24,9 @@ fontawesome-free = "==5.15.3"
 crispy-bootstrap5 = "==0.3.1"
 gunicorn = "==20.1.0"
 whitenoise = "==5.2.0"
-psycopg2 = "==2.8.6"
 dj-database-url = "==0.5.0"
 six = "==1.16.0"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.8"
